fixed failing test cases

--- a/hw7/hw7.html
+++ b/hw7/hw7.html
@@ -831,11 +831,16 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </tr>
 <tr class="odd">
 <td data-quarto-table-cell-role="th">2</td>
-<td>Jane</td>
-<td>Person 9</td>
+<td>Nikkil</td>
+<td>Person 6</td>
 </tr>
 <tr class="even">
 <td data-quarto-table-cell-role="th">3</td>
+<td>Jane</td>
+<td>Person 9</td>
+</tr>
+<tr class="odd">
+<td data-quarto-table-cell-role="th">4</td>
 <td>Virat</td>
 <td>Person 10</td>
 </tr>
@@ -967,11 +972,6 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </tr>
 </thead>
 <tbody>
-<tr class="odd">
-<td data-quarto-table-cell-role="th">0</td>
-<td>6</td>
-<td>Mentor</td>
-</tr>
 </tbody>
 </table>
 
